<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <!-- Main ViewGroup -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Top Bar -->
        <LinearLayout
            android:id="@+id/headerTop"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/headerlogo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/boldtitle"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:text="@string/header_text"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Header Image -->

        <ImageView
            android:id="@+id/bandImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/headerTop"
            android:scaleType="centerCrop"
            android:src="@drawable/simpleimage" />

        <!-- Title Section -->

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bandImage"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/boldtitle"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/welcome"
            android:textColor="@color/colorWhite"
            android:textSize="26sp" />

        <ScrollView
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/welcomeText">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/musicDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@font/segoeuil"
                    android:padding="10dp"
                    android:text="@string/appDescription"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/musicDescription1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/musicDescription"
                    android:fontFamily="@font/segoeuil"
                    android:padding="10dp"
                    android:text="@string/appDescription1"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/musicDescription2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/musicDescription1"
                    android:fontFamily="@font/segoeuil"
                    android:padding="10dp"
                    android:text="@string/appDescription2"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/question1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/musicDescription2"
                    android:fontFamily="@font/boldtitle"
                    android:padding="10dp"
                    android:text="@string/question1"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/favSong"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/question1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorWhite"
                    android:focusableInTouchMode="true"
                    android:focusedByDefault="false"
                    android:fontFamily="@font/segoeui"
                    android:hint="@string/hint1"
                    android:imeOptions="actionDone"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/question2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/favSong"
                    android:fontFamily="@font/boldtitle"
                    android:padding="10dp"
                    android:text="@string/question2"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/favBand"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/question2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorWhite"
                    android:focusableInTouchMode="true"
                    android:focusedByDefault="false"
                    android:fontFamily="@font/segoeui"
                    android:hint="@string/hint2"
                    android:imeOptions="actionDone"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/bands"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/favBand"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/bands" />
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>